kubernetes/web/efym-net/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: efym-net
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`efym.net`)
      kind: Rule
      # middlewares:
      #   - name: authelia
      #     namespace: authelia
      services:
        - name: efym-net
          port: 80
  tls:
    secretName: efym-net-tls
